@@ -244,12 +244,12 @@
 			<version>1.2.1</version>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>jgraph</groupId>
 			<artifactId>jgraph</artifactId>
 			<version>5.12.1.1</version>
 			<scope>compile</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>batik</groupId>
 			<artifactId>batik-svggen</artifactId>
